--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rnh",
-  "version": "0.0.1",
-  "description": "Hyperscript-like HTMLElement manipulation for the rnr library",
+  "version": "0.0.2",
+  "description": "Hyperscript-like HTMLElement creation, selection, and manipulation",
   "main": "dist/rnh.cjs.js",
   "jsnext:main": "dist/rnh.js",
   "scripts": {
